Main function completed

--- a/server/static/food.html
+++ b/server/static/food.html
@@ -9,15 +9,16 @@
 </head>
 
 <body>
-  <header>
+  <div class = "header">
+     <a href = "index.html"><img src="./img/logo.png" alt="CalgaryConnects" id="logo" width="100" height="50"></a>
 		<h1>First Things First: Food.</h1>
 		<h2>Where do you want to eat?</h2>
-	</header>
+  </div>
 
 
   <section class = "container">
 			<div class="answer">
-				<img src="assets/calgarydiner.webp" alt="">
+				<img src="img/calgarydiner.webp" alt="">
         <br>
         <a href="attractions.html">
       <button id = "A1">Lunch at a local diner</button>
@@ -25,7 +26,7 @@
       </div>
   
   <div class="answer">
-        <img src="assets/restaurant.jpg" alt="">
+        <img src="img/restaurant.jpg" alt="">
         <br>
         <a href = "attractions.html"><button id="A2"> High Class Cuisine</button>
          </a>
@@ -36,14 +37,14 @@
   
  <section class = "container">
 			<div class="answer">
-				<img src="assets/calgarydiner.webp" alt="">
+				<img src="img/food.jpg" alt="">
         <br>
         <a href = "attractions.html"><button id="A3"> Let's try to some diverse flavours!
         </button></a>
       </div>
   
   <div class="answer">
-        <img src="assets/restaurant.jpg" alt="">
+        <img src="img/market.jpg" alt="">
         <br>
         <a href = "attractions.html"><button id="A4"> I can eat anything really!
         </button></a>
