--- a/server/static/index.html
+++ b/server/static/index.html
@@ -7,42 +7,68 @@
   <title>Connect Calgary</title>
   <link href="./css/style.css" rel="stylesheet" type="text/css" />
 
-  <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+  <!--   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
+  <script src="https://kit.fontawesome.com/d28e486df3.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
 
-<!--NAV-->
+  <!--NAV-->
 
-<header>
-  <img src="./img/Logologo.png" alt="CalgaryConnects" id="logo" width="100" height="50"/>
-<!--   <h1 id="h1header">CalgaryConnects</h1> -->
+  <header>
+    <img src="./img/logo.png" alt="CalgaryConnects" id="logo" width="100" height="50">
+    <!--   <h1 id="h1header">CalgaryConnects</h1> -->
     <nav>
-      <ul class="navlinks">
+      <div class="navbar">
+        <a href="#" class="icons"><i class="fa-regular fa-square-plus fa-xl"></i>
+          <i class="fa-solid fa-square-plus fa-xl"></i>
+        </a>
+        <a href="#" class="icons"><i class="fa-regular fa-heart fa-xl"></i>
+          <i class="fa-solid fa-heart fa-xl"></i>
+        </a>
+        <a href="#" class="icons"><i class="fa-regular fa-envelope fa-xl"></i>
+          <i class="fa-solid fa-envelope fa-xl"></i>
+        </a>
+
+      </div>
+
+
+      <!--       <ul class="navlinks">
         <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
+        <i class="fa fa-camera-retro"></i>
+        <li><a 
         <li><a href="#">Contact</a></li>
-      </ul>
-      </nav>
-      <a class="login" href="login.html"><button id="loginbtn"> Login</button></a>
+      </ul> -->
+    </nav>
+    <a class="login" href="login.html"><button id="loginbtn"> Login</button></a>
   </header>
-  
+
   <!-- HOMEPAGE Hero -->
   <section id="hero">
     <div class="hero container">
       <div>
-        <h1 style="font-size:60px"> Welcome to Calgary Connects!</h1>
+        <h1 style="font-size:60px">Calgary Connects: Feel The Energy</h1>
 
-       <a href="food.html"><button type="button" id="btn1" class="btn btn-primary">
-          Tailor Your Experience </button></a>
-        
-        <button type="button" id="btn2" class="btn btn-primary" >
-          Explore</button>
+        <a href="food.html"><button type="button" id="btn1" class="btn btn-primary">
+            Tailor Your Experience </button></a>
+
+        <a href="mappage.html"><button type="button" id="btn2" class="btn btn-primary">
+            Explore</button></a>
 
       </div>
     </div>
   </section>
 
+  <section id="body">
+    <div class="featured_businesses">
+
+
+    </div>
+  </section>
+  <div class="warning">
+    <img src="https://www.solidbackgrounds.com/images/2560x1440/2560x1440-davys-grey-solid-color-background.jpg"
+      <h2>Beware of the leopard</h2>
+  </div>
 
 
 </body>
