--- a/server/static/activities.html
+++ b/server/static/activities.html
@@ -9,25 +9,26 @@
 </head>
 
 <body>
-  <header class = "hero">
-		<h1>Live a little!</h1>
+  
+  <div class = "header">
+    <a href = "index.html"><img src="./img/logo.png" alt="CalgaryConnects" id="logo" width="100" height="50"></a><h1>Live a little!</h1>
 		<h2>What's your idea of a good time?</h2>
-	</header>
+	</div>
 
 
   <section class = "container">
 			<div class="answer">
-				<img src="assets/calgarydiner.webp" alt="">
+				<img src="assets/nonprofitt.webp" alt="">
         <br>
         <a href="mappage.html">
-      <button id = "A1">Something chill and quiet. Maybe with a cat or two</button>
+      <button id = "A1">Cultural and Community events</button>
     </a>
       </div>
   
   <div class="answer">
-        <img src="assets/restaurant.jpg" alt="">
+        <img src="assets/stampede.jpg" alt="">
         <br>
-        <a href = "mappage.html"><button id="A2"> Going to a big event with lots of people and free food!
+        <a href = "mappage.html"><button id="A2"> Big events with lots of people and lots of food!
         </button>
         </a>
     </div>
@@ -36,14 +37,14 @@
 
  <section class = "container">
 			<div class="answer">
-				<img src="assets/calgarydiner.webp" alt="">
+				<img src="assets/devonians.jpg" alt="">
         <br>
-        <a href = "mappage.html"><button id="A3"> Murals, gardens, museums; anything artsy is totally my jam!
+        <a href = "mappage.html"><button id="A3"> Exploring murals, gardens, and museums!
         </button></a>
       </div>
   
   <div class="answer">
-        <img src="assets/restaurant.jpg" alt="">
+        <img src="assets/people.jpg" alt="">
         <br>
         <a href = "mappage.html"><button id="A4">I'll try anything with the right people!
         </button></a>
