--- a/server/static/attractions.html
+++ b/server/static/attractions.html
@@ -9,23 +9,24 @@
 </head>
 
 <body>
-  <header>
-		<h1>Experiences</h1>
+    <div class = "header">
+       <a href = "index.html"><img src="./assets/logo.png" alt="CalgaryConnects" id="logo" width="100" height="50"></a>
+		<h1>Attractions</h1>
 		<h2>What draws you to this city most?</h2>
-	</header>
+	</div>
 
 
   <section class = "container">
 			<div class="answer">
-				<img src="assets/calgarydiner.webp" alt="">
+				<img src="assets/fortcal.jpg" alt="">
         <br>
         <a href="activities.html">
-      <button id = "C1">The history</button>
+      <button id = "C1">The rich history</button>
     </a>
       </div>
   
   <div class="answer">
-        <img src="assets/restaurant.jpg" alt="">
+        <img src="assets/nightlife.jfif" alt="">
         <br>
         <a href = "activities.html"><button id="C2"> The Night life!
         </button>
@@ -37,16 +38,16 @@
   
  <section class = "container">
 			<div class="answer">
-				<img src="assets/calgarydiner.webp" alt="">
+				<img src="assets/dtculture.jpg" alt="">
         <br>
         <a href = "activities.html"><button id="C3"> Downtown Culture
         </button></a>
       </div>
   
-  <div class="answer">
-        <img src="assets/restaurant.jpg" alt="">
+      <div class="answer">
+        <img src="assets/dtcalgary.jpg" alt="">
         <br>
-        <a href = "activites.html"><button id="C4">I can't choose! I want to see everything
+       <a href = "activities.html"><button id="C3"> I can't choose! I want to see everything!
         </button></a>
     </div>
 </section> 
