bring in images

--- a/server/static/activities.html
+++ b/server/static/activities.html
@@ -18,17 +18,17 @@
 
   <section class = "container">
 			<div class="answer">
-				<img src="assets/nonprofitt.webp" alt="">
+				<img src="img/nonprofitt.webp" alt="">
         <br>
-        <a href="mappage.html">
+        <a href="pricerange.html">
       <button id = "A1">Cultural and Community events</button>
     </a>
       </div>
   
   <div class="answer">
-        <img src="assets/stampede.jpg" alt="">
+        <img src="img/stampede.jpg" alt="">
         <br>
-        <a href = "mappage.html"><button id="A2"> Big events with lots of people and lots of food!
+        <a href = "pricerange.html"><button id="A2"> Big events with lots of people and lots of food!
         </button>
         </a>
     </div>
@@ -37,16 +37,16 @@
 
  <section class = "container">
 			<div class="answer">
-				<img src="assets/devonians.jpg" alt="">
+				<img src="img/devonians.jpg" alt="">
         <br>
-        <a href = "mappage.html"><button id="A3"> Exploring murals, gardens, and museums!
+        <a href = "pricerange.html"><button id="A3"> Exploring murals, gardens, and museums!
         </button></a>
       </div>
   
   <div class="answer">
-        <img src="assets/people.jpg" alt="">
+        <img src="img/people.jpg" alt="">
         <br>
-        <a href = "mappage.html"><button id="A4">I'll try anything with the right people!
+        <a href = "pricerange.html"><button id="A4">I'll try anything with the right people!
         </button></a>
     </div>
 </section> 
