--- a/server/static/attractions.html
+++ b/server/static/attractions.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class = "header">
-       <a href = "index.html"><img src="./assets/logo.png" alt="CalgaryConnects" id="logo" width="100" height="50"></a>
+       <a href = "index.html"><img src="./img/logo.png" alt="CalgaryConnects" id="logo" width="100" height="50"></a>
 		<h1>Attractions</h1>
 		<h2>What draws you to this city most?</h2>
 	</div>
@@ -18,7 +18,7 @@
 
   <section class = "container">
 			<div class="answer">
-				<img src="assets/fortcal.jpg" alt="">
+				<img src="img/fortcal.jpg" alt="">
         <br>
         <a href="activities.html">
       <button id = "C1">The rich history</button>
@@ -26,7 +26,7 @@
       </div>
   
   <div class="answer">
-        <img src="assets/nightlife.jfif" alt="">
+        <img src="img/nightlife.jfif" alt="">
         <br>
         <a href = "activities.html"><button id="C2"> The Night life!
         </button>
@@ -34,18 +34,17 @@
     </div>
 </section> 
 
-
   
  <section class = "container">
 			<div class="answer">
-				<img src="assets/dtculture.jpg" alt="">
+				<img src="img/dtculture.jpg" alt="">
         <br>
         <a href = "activities.html"><button id="C3"> Downtown Culture
         </button></a>
       </div>
   
       <div class="answer">
-        <img src="assets/dtcalgary.jpg" alt="">
+        <img src="img/dtcalgary.jpg" alt="">
         <br>
        <a href = "activities.html"><button id="C3"> I can't choose! I want to see everything!
         </button></a>
