--- a/server/static/food.html
+++ b/server/static/food.html
@@ -20,7 +20,7 @@
 			<div class="answer">
 				<img src="img/calgarydiner.webp" alt="">
         <br>
-        <a href="attractions.html">
+        <a href="dietaryrestrictions.html">
       <button id = "A1">Lunch at a local diner</button>
     </a>
       </div>
@@ -28,7 +28,7 @@
   <div class="answer">
         <img src="img/restaurant.jpg" alt="">
         <br>
-        <a href = "attractions.html"><button id="A2"> High Class Cuisine</button>
+        <a href = "dietaryrestrictions.html"><button id="A2"> High Class Cuisine</button>
          </a>
     </div>
 </section> 
@@ -39,14 +39,14 @@
 			<div class="answer">
 				<img src="img/food.jpg" alt="">
         <br>
-        <a href = "attractions.html"><button id="A3"> Let's try to some diverse flavours!
+        <a href = "dietaryrestrictions.html"><button id="A3"> Let's try to some diverse flavours!
         </button></a>
       </div>
   
   <div class="answer">
         <img src="img/market.jpg" alt="">
         <br>
-        <a href = "attractions.html"><button id="A4"> I can eat anything really!
+        <a href = "dietaryrestrictions.html"><button id="A4"> I can eat anything really!
         </button></a>
     </div>
 </section> 
