--- a/server/static/index.html
+++ b/server/static/index.html
@@ -40,35 +40,42 @@
         <li><a href="#">Contact</a></li>
       </ul> -->
     </nav>
-    <a class="login" href="login.html"><button id="loginbtn"> Login</button></a>
+    <a class="connectnow" href="connectpage.html"><button id="loginbtn"> Connect Now</button></a>
+
+     <a class="login" href="login.html"><button id="loginbtn"> Login</button></a>
   </header>
+     
 
   <!-- HOMEPAGE Hero -->
   <section id="hero">
     <div class="hero container">
       <div>
-        <h1 style="font-size:60px">Calgary Connects: Feel The Energy</h1>
+        <h1>Calgary Connects: Feel The Energy</h1>
 
+        <div class="btn-group">
         <a href="food.html"><button type="button" id="btn1" class="btn btn-primary">
-            Tailor Your Experience </button></a>
+            Personalize Your Experience </button></a>
 
         <a href="mappage.html"><button type="button" id="btn2" class="btn btn-primary">
-            Explore</button></a>
+            Explore Your Area</button></a>
+
+        </div>
 
       </div>
     </div>
   </section>
-
-  <section id="body">
+<!--
+  <section class="container">
     <div class="featured_businesses">
-
+      <h3>Featured Businesses</h3>
 
     </div>
   </section>
-  <div class="warning">
-    <img src="https://www.solidbackgrounds.com/images/2560x1440/2560x1440-davys-grey-solid-color-background.jpg"
-      <h2>Beware of the leopard</h2>
-  </div>
+  <div class="shadowbox">
+    <h2>Upcoming Events</h2>
+    <img src="./assets/events.png" height="400">
+
+  </div> -->
 
 
 </body>
