--- a/server/static/mappage.html
+++ b/server/static/mappage.html
@@ -17,7 +17,9 @@
 </head>
 <body>
   <header>
-  <img src="./img/logo.png" alt="CalgaryConnects" id="logo" width="100" height="50"/>
+    <a href="/" id="logo">
+      <img src="./img/logo.png" alt="CalgaryConnects"  width="100" height="50"/>
+    </a>
 
     <nav class="navbar">
       <div class="navbar">
