--- a/server/static/login.html
+++ b/server/static/login.html
@@ -1,31 +1,45 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Login</title>
-<link rel="stylesheet" type="text/css" href="./css/loginstyles.css">
-  </head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Login</title>
+  <link rel="stylesheet" type="text/css" href="./css/loginstyles.css">
+</head>
+
 <body>
+  <div style="padding: 3mm;"></div>
   <div class="center">
     <h1>Login</h1>
     <form method="post">
       <div class="txt_field">
-        <input type="text" required>
+        <input type="text">
         <span></span>
         <label>Username</label>
       </div>
       <div class="txt_field">
-        <input type="password" required>
+        <input type="password">
         <label>Password</label>
       </div>
       <div class="pass"> Forgot Password?</div>
-      <input type="submit" value="Login">
+      <a href="localpage.html">
+        <button type="button" id="btn1" class="logbtn">Local Login</button>
+      </a>
+
+      <div style="padding: 3mm;"></div>
+
+      <a href="visitorpage.html">
+        <button type="button" id="btn1" class="logbtn">Vistor Login</button>
+      </a>
+
+
       <div class="signup_link">
         Not a member? <a href="signup.html">Signup</a>
       </div>
     </form>
   </div>
-    
+
 </body>
+
 </html>
